2009-06-17  Thomas Thurman  <thomas.thurman@collabora.co.uk>

	NB#119560 Hiding a window affects the visibility of
	other transient windows
	
	* matchbox/client-types/mb-wm-client-dialog.c: Added
	function mb_wm_client_dialog_stacking_layer() to figure
	out the layer dynamically.
	* matchbox/core/mb-window-manager.c: Remove all transients
	before unmanaging a window.  Function is_system_modal()
	moved out to mb-wm-client.c.
	* matchbox/core/mb-wm-client-window.c: improved
	debugging message.
	* matchbox/core/mb-wm-client.[ch]: moved function
	mb_wm_client_is_system_modal() in from mb-window-manager.c
	and added function mb_wm_client_remove_all_transients().

2009-06-16  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	Apply patch from Laszlo Pere for NB#121265.
	* matchbox/core/mb-wm-keys.c (mb_wm_keys_press): Fix if condition for
	the modifier mask.

	My own fix for keyboard shortcuts:
	* matchbox/core/mb-wm-keys.c (mb_wm_keys_binding_add_with_spec): Do
	not use keysym_needs_shift, it's not working as it should.
	Fixes: NB#120113

2009-06-12  Thomas Thurman  <thomas.thurman@collabora.co.uk>

        NB#118850

	* matchbox/core/mb-window-manager.c: When a window is unmapped,
	check whether each window below it wants focus and is visible
	in order to find the window which should be focussed next.
	* matchbox/core/mb-wm-client.[ch]: Add functions to get whether
	a window is visible, and whether a window covers the screen.

2009-06-11  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	* matchbox/client-types/mb-wm-client-menu.c (mb_wm_client_menu_init):
	Add support for the new atom for legacy menus. Fixes: NB#121678. Also
	returned the dynamic placement code since it does not break submenus
	anymore.
	* matchbox/core/mb-wm-client-window.c
	(mb_wm_client_window_sync_properties),
	matchbox/core/mb-wm-client-window.h, matchbox/core/mb-wm-types.h,
	matchbox/core/mb-wm-atoms.c: Add support for _HILDON_WM_WINDOW_TYPE
	and _HILDON_WM_WINDOW_TYPE_LEGACY_MENU atoms.
